mongo-db-excercise/4connect-mongo-node-js-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect-mongo-node-js-app-deployment
  namespace: mongo
  labels:
    app: connect-mongo-node-js-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connect-mongo-node-js-app
  template:
    metadata:
      labels:
        app: connect-mongo-node-js-app
    spec:
      containers:
        - name: connect-mongo-node-js-app
          image: arunkumarshahi/connect-mongo-node-js-app
          imagePullPolicy: Never
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: connect-mongo-node-js-app-service
  namespace: mongo
spec:
  selector:
    app: connect-mongo-node-js-app
  # type: NodePort
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8090
      # nodePort: 30002
