mongo-db-excercise/5nodejs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
  name: minimal-ingress
  namespace: mongo
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: connect-mongo-node-js-app-service
                port:
                  number: 8091
            path: /add_user
            pathType: Prefix
          - backend:
              service:
                name: connect-mongo-node-js-app-service
                port:
                  number: 8091
            path: /users
            pathType: Prefix
